# MLL_BankStatementAnalyzer

./: .env.example  .gitignore  Procfile  pyproject.toml  requirements.txt
src/statement_analysis/: main.py
src/statement_analysis/api/: dependencies.py  routes.py
src/statement_analysis/core/: config.py
src/statement_analysis/models/: request.py  response.py
src/statement_analysis/services/: content_validator.py  csv_extractor.py  llm_parser.py  pdf_extractor.py
tests/: conftest.py
tests/data/sample_pdfs/: README.md
tests/integration/: conftest.py  test_analyze_base64.py  test_analyze_upload.py
tests/unit/: test_content_validator.py  test_csv_extractor.py  test_llm_parser.py  test_pdf_extractor.py
